# FancyMumbleV2

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  pr.yml
src/: App.css  App.tsx  Chat.tsx  Login.tsx  Sidebar.css  Sidebar.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  link_preview_frontend_settings.json  server.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: helper.rs  mod.rs  settings_cmd.rs  web_cmd.rs  zip_cmd.rs
src-tauri/src/commands/utils/: settings.rs
src-tauri/src/connection/: connection_traits.rs  mod.rs  traits.rs
src-tauri/src/connection/connection_threads/: input_thread.rs  main_thread.rs  mod.rs  output_thread.rs  ping_thread.rs
src-tauri/src/connection/threads/: input_thread.rs  main_thread.rs  mod.rs  output_thread.rs  ping_thread.rs
src-tauri/src/errors/: application_error.rs  certificate_error.rs  mod.rs  string_convertion.rs  voice_error.rs
src-tauri/src/manager/: channel.rs  channel_manager.rs  connection_manager.rs  connection_state.rs  mod.rs  text_message.rs  text_message_manager.rs  user.rs  user_manager.rs  voice.rs  voice_manager.rs
src-tauri/src/mumble/: mod.rs  proto.rs
src-tauri/src/proto/: Fancy.proto  Mumble.proto  Mumble.proto.patch
src-tauri/src/protocol/: message_handler.rs  message_router.rs  message_transmitter.rs  mod.rs  stream_reader.rs
src-tauri/src/protocol/serialize/: message_container.rs  mod.rs
src-tauri/src/tests/: mod.rs  tidy.rs
src-tauri/src/utils/: argparse.rs  audio_player.rs  audio_recorder.rs  certificate_store.rs  constants.rs  file.rs  messages.rs  mod.rs  server.rs  varint.rs
src-tauri/src/utils/audio/: audio_decoder.rs  audio_device_manager.rs  audio_player.rs  audio_recorder.rs  decoder.rs  device_manager.rs  encoder.rs  microphone.rs  mod.rs  player.rs  recorder.rs
src-tauri/src/utils/audio/processing/: compress.rs  hysteresis.rs  mod.rs  resampler.rs  voice_activation.rs
src-tauri/src/utils/frontend/: mod.rs
src-tauri/src/utils/tests/: mod.rs  test_file_utils.rs  test_varint.rs
src/components/: AddNewServer.tsx  ChannelSearch.tsx  ChannelViewer.tsx  ChatInfoBar.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessageContainer.tsx  ColorPicker.tsx  CurrentUserInfo.tsx  EventLog.tsx  GifSearch.tsx  LightBoxImage.tsx  Loader.tsx  QuillChatInput.tsx  QuillEditor.tsx  Sidebar.css  Sidebar.tsx  Titlebar.tsx  UploadBox.tsx  UrlPreview.tsx  UserInfo.tsx  UserInfoPopover.tsx  WebRTCPreview.tsx
src/helper/: BackendMessageHandler.ts  BrowserUtils.ts  ChannelInfoHelper.ts  ChatMessage.ts  DOMHelper.ts  Fomat.ts  IncomingMessageParser.tsx  MessageParser.tsx  MessageUIHelper.tsx  OutgoingMessageParser.tsx  ProfileDataHelper.ts  (+2 more)
(+83 files in other folders)
