[package]
name = "app"
version = "0.1.5"
description = "Fancy Mumble"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }
prost-build = "0.11.8"
reqwest = { version = "0.11" }
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
patch = "0.7.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["dialog-open", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
futures = "0.3.4"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
argparse = "0.2.2"
prost = "0.11"
byteorder = "1.4.3"
async-trait = "0.1.68"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21.0"
openssl = "0.10.52"
os_info = "3"
opus = "0.3.0"
rodio = "0.17.1"

[dev-dependencies]
tempdir = "0.3"
mockall = "0.11.4"
tokio-test = "0.4.2"
xshell = "0.2.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
debug = 1

[profile.optimized]
inherits = "release"
lto = true
codegen-units = 1

[rust]
debuginfo-level = 1
